quorum/test/tests/other/Pass/ThisSet.quorum
use Libraries.Containers.Array

class Main
    action main
        Array<integer> a
        integer test = a:GetHashCode()
        integer test2 = me:GetHashCode()
        boolean result = test = test2
    end
end
