quorum/test/tests/other/Fail/UndefinedVariable.quorum


use Libraries.Containers.Array
class Main
action Main
integer something = 0
Array<integer> test
test:Add(nothing) // nothing has not be declared
end
end